syntax = "proto3";

package tag;
option go_package="./tag";

message Empty {}


//CreateTagRequest创建标签 start
message CreateTagRequest{
  uint64 creatorId = 1;
  string tag_name = 2;
  string group_name = 3;
  string type = 4;
  string old_tagName = 5;
}

message CreateTagResponse{
  string group_name = 2;
  // 使用 repeated 关键字表示 LowTags 是一个切片
  repeated LowTags low_tags = 3;
  message LowTags {
    uint64 id = 1;
    uint64 creator_id = 2;
    string tag_name = 3;
  }
}
// 创建标签end

// 删除标签 start
message DeleteTagRequest{
  uint64 creator_id = 1;
  repeated uint64 tag_id = 2;
}

message DeleteTagResponse{

}
//删除标签end



// 查询全部标签组 start
message GroupTag {
  uint64 id = 1;
  string group_name = 2;
}
message GroupTagResponse {
  repeated GroupTag tags = 1;
}
// 查询全部标签组 end

// 根据所选标签组 查询对应小标签
message SelectAllTagsByGroupName{
  string group_ame = 1;
}

message AllTags{
  uint64 id = 1;
  string tag_name = 2;
  string group_name = 4;
  uint64 creator_id = 3;
}

message AllTagsByGroupNameResponse{
  repeated AllTags low_tags = 1;
}

// 用户选择自定义标签以及系统标签
message ChooseTagsRequest{
  uint64 id = 1 ;//用户id
  uint64 system_id = 2 ;//系统标签id
  repeated uint64 tag_ids = 3; //用户自定义标签id
}

message ChooseTagsResponse{

}

// 查询当前用户选择以及创建的标签 Request
message SelectLinkTagsRequest{
  uint64 id = 1; //用户id
  bool isSelf = 2 ; //是否是当前登录用户
}

// 查询当前用户选择以及创建的标签 Response
message SelectLinkTag{
  uint64 id = 1; //标签id
  uint64 creator_id = 2; //创作者id
  string tag_name = 3 ;//标签名称
}
message SelectLinkTagsResponse {
  repeated SelectLinkTag linkTags = 1 ; //数据
}

// 查询我创建的标签
message SelectMyTagsRequest{
  uint64 user_id = 1; //用户id
}

//检查标签数量
message CheckTagCountRequest{
  uint64 user_id = 1;//当前登录用户的id
}
message CheckTagCountResponse {
  uint64 count = 2; //标签数
}
//检查标签数量

//取消选择标签
message CancelRequest {
  uint64 user_id = 1;
  repeated uint64 tag_ids = 2;
}

// TagLogin 登录之后的服务
service TagLogin {
  rpc CreateTag(CreateTagRequest) returns(CreateTagResponse); //用户创建标签
  rpc UpdateTag(CreateTagRequest) returns(CreateTagResponse); //用户修改标签
  rpc DeleteTag(DeleteTagRequest) returns(DeleteTagResponse); //用户删除标签
  rpc SelectGroupTag(Empty) returns (GroupTagResponse); //查询系统标签
  rpc SelectAllTagsByGroup (SelectAllTagsByGroupName) returns (AllTagsByGroupNameResponse); //根据系统标签查询所有用户自定义标签
  rpc ChooseTags(ChooseTagsRequest) returns (ChooseTagsResponse); //用户选择标签
  rpc SelectLinkTags(SelectLinkTagsRequest) returns (SelectLinkTagsResponse); //查询当前用户选择以及创建的标签
  rpc SelectMyTags(SelectMyTagsRequest) returns (AllTagsByGroupNameResponse); //查询我创建的标签
  rpc CheckTagCount(CheckTagCountRequest) returns(CheckTagCountResponse); //查询标签数量
  rpc CancelUserTag (CancelRequest) returns (Empty) ; //取消选择标签
}


message UserChooseTagRequest{
  uint64 user_id = 1;
  uint64 tag_id = 2;
}

// TagSign 登录之前的服务
service TagSign {
  rpc SignUserChooseTag(UserChooseTagRequest) returns (UserChooseTagRequest); //注册时强制选择一个标签
  rpc SignUserChooseTagRevert(UserChooseTagRequest) returns (UserChooseTagRequest); //注册时选择一个标签的补偿方法
}


//  goctl rpc protoc service/tag/tag.proto --go_out=service/tag --go-grpc_out=service/tag --zrpc_out=service/tag -m



